--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <link rel="stylesheet" href="styles.css" />
   <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
+  <link rel="icon" type="image/png" href="favicon/favicon-96x96.png" />
+
 </head>
 <body>
   <header>
+    <img src="BS shipping LOGO.png" class="navbar-logo" alt="Breeza Sea Logo" />
     <div class="logo">Breeza Sea Carriers <span>Shipping (UK) Limited</span></div>
     <nav>
       <a href="#services">Services</a>
